exports[`test should render FiltersForm with NOT empty filters 1`] = `
<form
  className="ui form filters_form">
  <div
    className="inline field">
    <label>
      Projets
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les projets
        </option>
        <option
          value={1}>
          eCookbook
        </option>
        <option
          value={5}>
          Private child of eCookbook
        </option>
        <option
          value={6}>
          Child of private child
        </option>
        <option
          value={3}>
          eCookbook Subproject 1
        </option>
        <option
          value={4}>
          eCookbook Subproject 2
        </option>
        <option
          value={2}>
          OnlineStore
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les projets
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les projets
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Private child of eCookbook
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Child of private child
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook Subproject 1
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook Subproject 2
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            OnlineStore
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Trackers
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les trackers
        </option>
        <option
          value={1}>
          Bug
        </option>
        <option
          value={2}>
          Feature request
        </option>
        <option
          value={3}>
          Support request
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les trackers
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les trackers
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Bug
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Feature request
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Support request
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Statuts
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les statuts
        </option>
        <option
          value={1}>
          New
        </option>
        <option
          value={2}>
          In Progress
        </option>
        <option
          value={3}>
          Done
        </option>
        <option
          value={4}>
          Feedback
        </option>
        <option
          value={5}>
          Closed
        </option>
        <option
          value={6}>
          Rejected
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les statuts
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les statuts
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            New
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            In Progress
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Done
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Feedback
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Closed
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Rejected
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Observateur
    </label>
    <div
      aria-busy={undefined}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Indéterminé
        </option>
        <option
          value="true">
          Oui
        </option>
        <option
          value="false">
          Non
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Indéterminé
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Indéterminé
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Oui
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Non
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Assigné à
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Indéterminé
        </option>
        <option
          value="me">
          moi
        </option>
        <option
          value={1}>
          Redmine Admin
        </option>
        <option
          value={3}>
          Dave Lopper
        </option>
        <option
          value={2}>
          John Smith
        </option>
        <option
          value={8}>
          User Misc
        </option>
        <option
          value={9}>
          User Misc
        </option>
        <option
          value={4}>
          Robert Hill
        </option>
        <option
          value={7}>
          Some One
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Indéterminé
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Indéterminé
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            moi
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Redmine Admin
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Dave Lopper
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            John Smith
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            User Misc
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            User Misc
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Robert Hill
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Some One
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Date de mise à jour
    </label>
    <div
      className="ui left action input date_input">
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui compact selection dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}>
        <select
          aria-hidden="true"
          multiple={undefined}
          name={undefined}
          type="hidden"
          value="=">
          <option
            value="" />
          <option
            value="=">
            =
          </option>
          <option
            value="<">
            <
          </option>
          <option
            value=">">
            >
          </option>
        </select>
        <div
          className="text">
          =
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon" />
        <div
          className="menu transition">
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              =
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              <
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              >
            </span>
          </div>
        </div>
      </div>
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui selection link item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}>
        <select
          aria-hidden="true"
          multiple={undefined}
          name={undefined}
          type="hidden"
          value="">
          <option
            value="" />
          <option
            value="">
            Indéterminée
          </option>
          <option
            value="0 day">
            Aujourd\'hui
          </option>
          <option
            value="1 week">
            Il y a une semaine
          </option>
          <option
            value="1 month">
            Il y a un mois
          </option>
          <option
            value="other">
            Autre
          </option>
        </select>
        <div
          className="default text">
          Indéterminée
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon" />
        <div
          className="menu transition">
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Indéterminée
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Aujourd\'hui
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Il y a une semaine
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Il y a un mois
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Autre
            </span>
          </div>
        </div>
      </div>
      <input
        className="hidden"
        onChange={[Function]}
        placeholder="DD/MM/YYYY"
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="inline field"
    id="form_content_field">
    <label>
      Contient
    </label>
    <div
      className="ui input">
      <input
        onChange={[Function]}
        placeholder="contenu recherché"
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="ui divider" />
  <button
    className="ui blue button"
    name="apply_filters"
    onClick={[Function]}
    tabIndex={undefined}
    type="submit">
    Appliquer
  </button>
  <button
    className="ui button"
    name="reset_filters"
    onClick={[Function]}
    tabIndex={undefined}>
    Effacer
  </button>
  <button
    className="ui right floated button"
    name="close_form"
    onClick={[Function]}
    tabIndex={undefined}>
    Fermer
  </button>
</form>
`;

exports[`test should render FiltersForm with empty filters 1`] = `
<form
  className="ui form filters_form">
  <div
    className="inline field">
    <label>
      Projets
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les projets
        </option>
        <option
          value={1}>
          eCookbook
        </option>
        <option
          value={5}>
          Private child of eCookbook
        </option>
        <option
          value={6}>
          Child of private child
        </option>
        <option
          value={3}>
          eCookbook Subproject 1
        </option>
        <option
          value={4}>
          eCookbook Subproject 2
        </option>
        <option
          value={2}>
          OnlineStore
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les projets
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les projets
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Private child of eCookbook
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Child of private child
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook Subproject 1
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            eCookbook Subproject 2
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            OnlineStore
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Trackers
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les trackers
        </option>
        <option
          value={1}>
          Bug
        </option>
        <option
          value={2}>
          Feature request
        </option>
        <option
          value={3}>
          Support request
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les trackers
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les trackers
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Bug
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Feature request
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Support request
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Statuts
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Tous les statuts
        </option>
        <option
          value={1}>
          New
        </option>
        <option
          value={2}>
          In Progress
        </option>
        <option
          value={3}>
          Done
        </option>
        <option
          value={4}>
          Feedback
        </option>
        <option
          value={5}>
          Closed
        </option>
        <option
          value={6}>
          Rejected
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Tous les statuts
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Tous les statuts
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            New
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            In Progress
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Done
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Feedback
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Closed
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Rejected
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Observateur
    </label>
    <div
      aria-busy={undefined}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Indéterminé
        </option>
        <option
          value="true">
          Oui
        </option>
        <option
          value="false">
          Non
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Indéterminé
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Indéterminé
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Oui
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Non
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Assigné à
    </label>
    <div
      aria-busy={false}
      aria-disabled={undefined}
      aria-expanded={false}
      className="ui search selection left pointing link item dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={undefined}>
      <select
        aria-hidden="true"
        multiple={undefined}
        name={undefined}
        type="hidden"
        value="">
        <option
          value="" />
        <option
          value="">
          Indéterminé
        </option>
        <option
          value="me">
          moi
        </option>
        <option
          value={1}>
          Redmine Admin
        </option>
        <option
          value={3}>
          Dave Lopper
        </option>
        <option
          value={2}>
          John Smith
        </option>
        <option
          value={8}>
          User Misc
        </option>
        <option
          value={9}>
          User Misc
        </option>
        <option
          value={4}>
          Robert Hill
        </option>
        <option
          value={7}>
          Some One
        </option>
      </select>
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        name="-search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value="" />
      <div
        className="default text">
        Indéterminé
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon" />
      <div
        aria-multiselectable={undefined}
        className="menu transition"
        role="listbox">
        <div
          aria-checked={true}
          aria-disabled={undefined}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Indéterminé
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            moi
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Redmine Admin
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Dave Lopper
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            John Smith
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            User Misc
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            User Misc
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Robert Hill
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={undefined}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }>
          <span
            className="text">
            Some One
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="inline field">
    <label>
      Date de mise à jour
    </label>
    <div
      className="ui left action input date_input">
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui compact selection dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}>
        <select
          aria-hidden="true"
          multiple={undefined}
          name={undefined}
          type="hidden"
          value="=">
          <option
            value="" />
          <option
            value="=">
            =
          </option>
          <option
            value="<">
            <
          </option>
          <option
            value=">">
            >
          </option>
        </select>
        <div
          className="text">
          =
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon" />
        <div
          className="menu transition">
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              =
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              <
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              >
            </span>
          </div>
        </div>
      </div>
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui selection link item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}>
        <select
          aria-hidden="true"
          multiple={undefined}
          name={undefined}
          type="hidden"
          value="">
          <option
            value="" />
          <option
            value="">
            Indéterminée
          </option>
          <option
            value="0 day">
            Aujourd\'hui
          </option>
          <option
            value="1 week">
            Il y a une semaine
          </option>
          <option
            value="1 month">
            Il y a un mois
          </option>
          <option
            value="other">
            Autre
          </option>
        </select>
        <div
          className="default text">
          Indéterminée
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon" />
        <div
          className="menu transition">
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Indéterminée
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Aujourd\'hui
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Il y a une semaine
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Il y a un mois
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }>
            <span
              className="text">
              Autre
            </span>
          </div>
        </div>
      </div>
      <input
        className="hidden"
        onChange={[Function]}
        placeholder="DD/MM/YYYY"
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="inline field"
    id="form_content_field">
    <label>
      Contient
    </label>
    <div
      className="ui input">
      <input
        onChange={[Function]}
        placeholder="contenu recherché"
        type="text"
        value={undefined} />
    </div>
  </div>
  <div
    className="ui divider" />
  <button
    className="ui grey button"
    name="apply_filters"
    onClick={[Function]}
    tabIndex={undefined}
    type="submit">
    Appliquer
  </button>
  <button
    className="ui disabled button"
    name="reset_filters"
    onClick={[Function]}
    tabIndex={-1}>
    Effacer
  </button>
  <button
    className="ui right floated button"
    name="close_form"
    onClick={[Function]}
    tabIndex={undefined}>
    Fermer
  </button>
</form>
`;
